<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CDDC39"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="274dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/logtitle"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/loglay3"
                android:textColor="#050505"
                android:textSize="24sp"
                android:translationX="10dp" />

            <EditText
                android:id="@+id/loginp3"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/loginp3"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:translationX="100dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/loglay1"
                android:textColor="#050505"
                android:textSize="24sp"
                android:translationX="10dp" />

            <EditText
                android:id="@+id/loginp1"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/loginp1"
                android:inputType="textEmailAddress"
                android:textColor="#040303"
                android:translationX="100dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/loglay2"
                android:textColor="#050505"
                android:textSize="24sp"
                android:translationX="10dp" />

            <EditText
                android:id="@+id/loginp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/loginp2"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:translationX="100dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp" />

            <Button
                android:id="@+id/logbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FF9800"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/logbtn"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:translationX="130dp"
                app:backgroundTint="#FF9800"
                app:strokeColor="#FF9800" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>