<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/maitit"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/maibie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#000000"
                android:textSize="36sp"
                android:translationX="10dp"
                tools:text="@string/maibie" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp" />

            <Button
                android:id="@+id/maibtn1"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:text="@string/maibtn1"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:translationX="70dp"
                app:backgroundTint="#FF9800" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp" />

            <Button
                android:id="@+id/maibtn2"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:text="@string/maibtn2"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:translationX="70dp"
                app:backgroundTint="#FF9800" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp" />

            <Button
                android:id="@+id/maibtn3"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:text="@string/maibtn3"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:translationX="70dp"
                app:backgroundTint="#FF9800" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>